# GenICam_processing

./: .gitignore  CMakeLists.txt  CameraAquisition.cpp  GenICam_nodes.py  MakeFile  README.md  cameraconfig.cpp  cvbconfig.cpp  cvbconfig.hpp  cvbmain.cpp  harvester_main.py  main.cpp  main.py  makefile  mvImpact.py  requirements.txt  trigger.sh  utils.cpp  utils.hpp  videoprocessing.cpp
Include/: cvbconfig.hpp
deprecated/mvIMPACT/: main.cpp  makefile  utils.cpp
logs/: 2022-06-17_10-42.txt  2022-06-17_10-44.txt
src/: .gitignore  CMakeLists.txt  aravis.c  aravis.cpp  cameraconfig.cpp  check_current_time.cpp  check_time.cpp  convert.cpp  convert.py  convert_folder.py  jumbo.patch  main.cpp  main.py  meson.build  meson.build.orig  retrieve_save.cpp  timetest.cpp  trigger.sh  trigger_single.sh
src/Include/: cameraconfig.hpp
src/Rpi_web/: app.py  autostart.sh
src/Rpi_web/templates/: index.html
src/deprecated/: videoprocessing.hpp
src/deprecated/python/: GenICam_nodes.py  harvester_GUI.py  main.py
src/processed/data/: calibrate.py
src/processed/data/config/: cam0-05-02.txt  cam0-05-04.txt  cam1-05-02.txt  cam1-05-04.txt  distortion_00.xml  distortion_01.xml  intrinics_00.xml  intrinics_01.xml
